# Fake-S3

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
fake_s3/: file_store.py  main.py  s3_responses.py
