[tool.poetry]
name = "fake-s3"
version = "1.0.1"
description = "A python port of Fake-S3."
authors = ["RuslanUC <dev_ruslan_uc@protonmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Environment :: Console",
]
packages = [{include = "fake_s3"}]

[tool.poetry.urls]
Homepage = "https://github.com/RuslanUC/Fake-S3"
Repository = "https://github.com/RuslanUC/Fake-S3"

[tool.poetry.scripts]
fake_s3 = "fake_s3.main:main"

[tool.poetry.dependencies]
python = "^3.7"
quart = ">=0.18.3"
uvicorn = ">=0.21.1"
click = ">=8.1.3"
aiofiles = ">=23.1.0"
python-magic = ">=0.4.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
